Separate Board representation

--- a/src/components/board.html
+++ b/src/components/board.html
@@ -2,7 +2,7 @@
   <dl>
     <dt>Field:</dt>
     <dd>
-      <span v-for="sheep in field" :class="$style.sheep">
+      <span v-for="sheep in board.field" :class="$style.sheep">
         {{ sheep }}
       </span>
     </dd>
