--- a/src/components/board.html
+++ b/src/components/board.html
@@ -3,7 +3,7 @@
     <dt>Field:</dt>
     <dd>
       <span v-for="sheep in board.field" :class="$style.sheep">
-        {{ sheep }}
+        {{ sheep.rank }}
       </span>
     </dd>
   </dl>
