Add margin only for sheep in field

--- a/src/components/board.html
+++ b/src/components/board.html
@@ -7,7 +7,7 @@
       </span>
     </dd>
     <dt>Field:</dt>
-    <dd>
+    <dd :class="$style.field">
       <span v-for="sheep in board.field" :class="$style.sheep">
         {{ sheep.rank }}
       </span>
