--- a/src/components/board.css
+++ b/src/components/board.css
@@ -3,7 +3,9 @@
 }
 
 .sheep {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid gray;
   background: #f9f9f9;
   color: #000;
