--- a/src/components/board.html
+++ b/src/components/board.html
@@ -7,13 +7,13 @@
       </span>
     </dd>
     <dt>Field:</dt>
-    <dd :class="$style.field">
+    <dd :class="[$style.field, $style.sparse]">
       <span v-for="sheep in board.field" :class="[$style.sheep, $style.card]">
         {{ sheep.rank }}
       </span>
     </dd>
     <dt>Hand:</dt>
-    <dd :class="$style.hand">
+    <dd :class="[$style.hand, $style.sparse]">
       <span v-for="event in board.hand" :class="[$style.event, $style.card]">
         {{ event.name }}
       </span>
